--- a/FluxiAdmin/Pages/FilmPage.xaml
+++ b/FluxiAdmin/Pages/FilmPage.xaml
@@ -36,6 +36,8 @@
                 <TextBox Text="{Binding Name}"></TextBox>
                 <TextBox Text="{Binding Id}"></TextBox>
                 <Button Command="{Binding OpenFileCommand}" Content="Image"></Button>
+                <Button Command="{Binding OpenFileBackCommand}" Content="Image"></Button>
+                <Button Command="{Binding OpenFileVideoCommand}" Content="Image"></Button>
                 <Button Command="{Binding AddCommand}" Content="Valider"></Button>
             </StackPanel>
         </GroupBox>
