--- a/FluxiAdmin/MainWindow.xaml
+++ b/FluxiAdmin/MainWindow.xaml
@@ -9,11 +9,11 @@
     <Grid>
         <GroupBox HorizontalAlignment="Center" VerticalAlignment="Center">
             <StackPanel>
-                <Label Content="Username" HorizontalAlignment="Left"/>
-                <TextBox HorizontalAlignment="Left" Height="33" Text="TextBox" Width="181"/>
+                <Label Content="Email" HorizontalAlignment="Left"/>
+                <TextBox Text="{Binding Email}" HorizontalAlignment="Left" Height="33" Width="181"/>
                 <Label Content="Password" HorizontalAlignment="Left"/>
-                <TextBox HorizontalAlignment="Left" Height="33" Text="TextBox" Width="181"/>
-                <Button Content="Valider" Click="Connection"></Button>
+                <TextBox Text="{Binding Password}" HorizontalAlignment="Left" Height="33" Width="181"/>
+                <Button Content="Valider" Command="{Binding ConnectionCommand}"></Button>
             </StackPanel>
         </GroupBox>
         
